<resources>
    <string name="app_name">安防校园-教师端</string>
    <string name="company_tel">400-8788-165</string>
    <string name="company_name">数海信息技术有限公司</string>
    <string name="company_name_es">Copyright©2016-2017 Shuhai Information Technology\nCo.,Ltd. All rights reserved</string>

    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_delete">删 除</string>
    <string name="btn_send">发送</string>
    <string name="btn_search">搜索</string>

    <!---->
    <string name="nav_home">首页</string>
    <string name="nav_track">跟踪</string>
    <string name="nav_mine">我的</string>

    <string name="username">用户名</string>
    <string name="hint_username">请输入用户名</string>
    <string name="userpwd">密码</string>
    <string name="forgetpwd"><u>忘记密码</u></string>
    <string name="login">登录</string>
    <string name="error_empty_login">请输入用户名或密码</string>

    <string name="home_homework">家庭作业</string>
    <string name="home_notice">班级公告</string>
    <string name="home_question">在线提问</string>
    <string name="home_location">位置查询</string>
    <string name="home_score">成绩管理</string>
    <string name="home_checkin">考勤管理</string>
    <string name="home_leave">请假管理</string>
    <string name="home_alarm">警报查询</string>

    <string name="option_date">选择日期</string>
    <string name="option_sdate">开始日期</string>
    <string name="option_edate">结束日期</string>

    <string name="mine_info">我的信息</string>
    <string name="mine_class">我的班级</string>
    <string name="mine_course">我的课程</string>
    <string name="mine_student">我的学生</string>
    <string name="mine_contacts">通讯录</string>
    <string name="mine_about">关于</string>
    <string name="mine_setting">设置</string>
    <string name="mine_exit">退出当前账号</string>
    <string name="title_detail">学生详情</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_help">使用帮助</string>
    <string name="label_old_pwd">旧密码</string>
    <string name="label_new_pwd1">新密码</string>
    <string name="label_new_pwd2">确认密码</string>

    <!--家庭作业-->
    <string name="push">发布</string>
    <string name="push_again">重新发布</string>
    <string name="homework_push">发布作业</string>
    <string name="homework_detail">作业详情</string>
    <string name="label_class">班级：</string>
    <string name="label_subject">科目：</string>
    <string name="label_starttime">布置时间：</string>
    <string name="label_time">时间：</string>
    <string name="label_endtime">完成时间：</string>
    <string name="label_hint_endtime">点击选择完成时间</string>
    <string name="label_homework_title">作业名称：</string>
    <string name="label_homework_title_option">作业名称：%1$s</string>
    <string name="label_leave_starttime">请假时间：</string>
    <string name="label_leave_endtime">销假时间：</string>
    <string name="label_leave_content">请假事由：</string>
    <string name="label_leave_student">学生：</string>
    <string name="label_leave_type">请假类型：</string>
    <string name="label_leave_status">请假状态：</string>
    <string name="label_leave_ok">批准</string>
    <string name="label_leave_rebut">驳回</string>

    <string name="label_tip">提示</string>
    <string name="label_teacher">教师：</string>
    <string name="label_teacher_option">教师：%1$s</string>
    <string name="label_notice_title">标题：</string>
    <string name="label_content">内容：</string>
    <string name="label_content_option">内容：\n%1$s</string>
    <string name="label_camera">拍照</string>
    <string name="label_voice">录音</string>
    <string name="label_album">选择照片</string>
    <string name="label_back">返回</string>
    <string name="homework_start_end_time">发布时间：%1$s\n完成时间：%2$s</string>
    <string name="toast_get_failed">获取失败</string>

    <string name="select_picture">选择相册</string>
    <string name="complete">完成</string>
    <string name="complete_percent">完成(%1$d/%2$d)</string>

    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="image_upline">最多选择%1$d张图片</string>
    <string name="image_loadfailed">相册加载失败</string>
    <string name="toast_camera_failed">相机打开失败</string>

    <string name="hint_homework_content">请输入作业内容</string>
    <string name="hint_old_pwd">请输入旧密码</string>
    <string name="hint_new_pwd1">请输入新密码</string>
    <string name="hint_new_pwd2">请重新输入新密码</string>

    <!--提醒消息-->
    <string name="msg_delete_homework">确定要删除此家庭作业吗？</string>
    <string name="msg_delete_notice">确定要删除此活动公告吗？</string>
    <string name="msg_miss_time">请选择一完整时间段</string>
    <string name="msg_large_endtime">结束时间小于开始时间，请重新选择</string>
    <string name="msg_month_cannot_overstep">只能查询当月日期的数据</string>
    <string name="msg_exit">确定要退出当前账号吗？</string>

    <string name="permission_location_denied">未授予获取位置信息权限</string>
    <string name="permission_location_rationale">请求授予定位权限</string>
    <string name="permission_location_never_askagain">已禁止该应用的定位权限，请去设置中进行设置</string>
    <string name="permission_storage_denied">已禁止该应用的读写文件权限</string>
    <string name="permission_camera_denied">已禁止该应用的使用相机权限</string>
    <string name="permission_storage_never_askagain">已禁止该应用的读写文件权限，请去设置中进行设置</string>
    <string name="permission_camera_never_askagain">已禁止该应用的使用相机权限，请去设置中进行设置</string>

    <string name="permission_call_rationale">请求授予拨打电话权限</string>
    <string name="permission_call_never_askagain">已禁止该应用的拨打电话权限，请去设置中进行设置</string>

    <string name="permission_readphonestate_denied">未授予获取【读取手机信息】或【读写文件】或【录音】权限</string>
    <!--<string name="permission_readphonestate_rationale">请求授予读取手机信息权限</string>-->
    <!--<string name="permission_readphonestate_never_askagain">已禁止该应用的读取手机信息权限，请去设置中进行设置</string>-->

    <string name="permission_cameravoice_denied">未授予【相机】或【录音】权限</string>
    <string name="permission_cameravoice_rationale">请求授予【相机】或【录音】权限</string>
    <string name="permission_cameravoice_never_askagain">已禁止该应用的【相机】或【录音】权限，请去设置中进行设置</string>

    <string name="permission_voice_denied">未授予录音权限</string>
    <string name="permission_voice_rationale">请求授予录音权限</string>
    <string name="permission_voice_never_askagain">已禁止该应用的录音权限，请去设置中进行设置</string>
    <string name="voice_recorder_error">录音错误</string>

    <string name="permission_never_askagain">已禁止该应用的【读取手机信息】或【读写文件】或【录音】权限，请去设置中进行设置</string>
    <string name="permission_open_camera_fail">摄像头开启失败\n建议检查安防校园是否被允许使用摄像头</string>

    <string name="toast_record_unstop">请完成录音后再发布作业</string>
    <string name="toast_homework_empty">请将作业名称，完成时间及作业内容填写完整</string>
    <string name="toast_choose_student">请选择一名学生</string>
    <string name="toast_choose_time">请选择起止日期</string>
    <string name="toast_input_empty">暂无数据</string>
    <string name="toast_edit_empty">输入信息不完整</string>
    <string name="toast_password_length_lt6">新密码不得小于6位</string>
    <string name="toast_data_empty">暂无数据</string>
    <string name="toast_data_analyze">数据解析错误</string>
    <string name="toast_startcall_error">拨号启动失败</string>
    <string name="toast_exit">再按一次退出程序</string>
    <string name="toast_fence_empty">该学生暂无围栏信息</string>
    <string name="toast_pwd_not_equal">新密码与确认密码不相同，请重新输入</string>
    <string name="toast_point_null">坐标点无效</string>
    <string name="toast_class_empty">无执教班级</string>

    <string name="progress_add_homework">正在发布作业</string>
    <string name="progress_del_homework">正在刪除作业</string>
    <string name="progress_add_notice">正在发布公告</string>
    <string name="progress_del_notice">正在刪除公告</string>
    <string name="progress_loading">loading...</string>
    <string name="progress_loading_cn">正在提交...</string>

    <string name="label_call">打电话</string>
    <string name="label_chat">发消息</string>
    <string name="toast_no_history_message">没有历史消息了</string>

    <string name="string_call_terminated">Call Terminated</string>
    <string name="string_incall">In Call</string>
    <string name="string_call_incoming">邀请您进行视频通话...</string>
    <string name="string_call_outgoing">正在等待对方接受邀请...</string>
    <string name="string_call_cancelled">Call cancelled</string>

    <string name="string_call_hangup">挂断</string>
    <string name="string_call_camera_switch">转换摄像头</string>

    <string name="label_chat_option_revert">撤回</string>
    <string name="label_chat_option_delete">删除</string>

    <string name="title_check_user">忘记密码</string>
    <string name="title_forgot_password">忘记密码</string>
    <string name="string_phone">手机号:</string>
    <string name="string_verify_code">验证码:</string>
    <string name="hint_code">请输入验证码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="btn_send_code">发送验证码</string>
    <string name="label_next">下一步</string>

</resources>
