<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llCalendarContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/white_option"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_10">

        <LinearLayout
            android:id="@+id/llStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_black_1"
                android:text="@string/option_sdate" />

            <TextView
                android:id="@+id/txtStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_black_2"
                android:text="2016-12-12" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llStart"
            android:gravity="center"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_black_1"
                android:text="@string/option_edate" />

            <TextView
                android:id="@+id/txtEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_black_2"
                android:text="2016-12-12" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dp_5"
            android:background="@drawable/btn_topright_bg"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/btn_confirm"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.android.widget.calendar.MaterialCalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>
</LinearLayout>